added the albums and style sheet

--- a/index.html
+++ b/index.html
@@ -1,24 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> artists </title>
+    <title> Twenty One Pilots </title>
 </head>
 <body>
-    <nav>
-        <div class="icon">
-            <img src="images/icons8-twenty-one-pilots-48.png" alt="logo" width="50" height="50">
+    <div class="container">
+        <nav>
+            <div class="icon">
+                <img src="images/icons8-twenty-one-pilots-48.png" alt="logo" width="50" height="50">
+            </div>
+             <div class="link">
+                <a href="#">about</a>
+                <a href="#">signup</a>
+                <a href="#">login</a>
+            </div>
+        </nav>
+        <div class="para">
+            <h1>Twenty One Pilots </h1>
+            <p>This website contains Twenty One Pilots albums this is for you harshit happy birthday!</p>
+            <a href="naruto.html" target="_blank">naruto</a>
         </div>
-         <div class="link">
-            <a href="#">about</a>
-            <a href="#">signup</a>
-            <a href="#">login</a>
+        <div class="img1">
+            <img src="images/walll.jpg" alt="21pilots" width="350" height="200">
         </div>
-    </nav>
-    <h1>my top 4 artists</h1>
-    <p>This website contains my top 4 fav artists all of them are composers, singers of different genre</p>
-    <p><button>submit</button> your favorite artists </p>
+    </div>
+    <div class="container2">
+        <h2>Albums of Twenty One Pilots</h2>
+        <div class="img">
+            <div class="albums">
+                <img src="images/Blurryface.jpg" alt="burryface" width="200" height="200">
+                <a class="text" href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><h4>Blurryface</h4></a>
+            </div>
+            <div class="albums">
+                <img src="images/Trench.jpg" alt="trench" width="200" height="200">
+                <a class="text" href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><h4>Trench</h4></a>
+            </div>
+            <div class="albums">
+                <img src="images/Vessel.jpg" alt="vessel" width="200" height="200">
+                <a class="text" href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn" target="_blank"><h4>Vessel</h4></a>
+            </div>
+            <div class="albums">
+                <img src="images/peakpx (2).jpg" alt="scaledAndIced" width="200" height="200">
+                <a class="text" href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ" target="_blank"><h4>scaled and icy</h4></a>
+                
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
