--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
             <div class="more">
                 <p>Contribute to enhance this website now!</p>
                 <p>click the git hub button for your contribution </p>
-                <a href="https://github.com/R-ia/landing-page" target="_blank"><button>google</button></a>
+                <a href="https://github.com/R-ia/landing-page" target="_blank" ><button>google</button></a>
             </div>
-            
         </div>
+        <footer>
+            <p>copyrights @ Harshit Joshi 2023 </p>
+            <p>decoded 21 by Riya Kandpal</p>
+        </footer>
     </div>
 </body>
 </html>
