--- a/naruto.html
+++ b/naruto.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>naruto</title>
 </head>
 <body>
-   <h1>Happy birthday naruto!.</h1>
-    <img src="images/pixiz-19-02-2023-11-44-43.jpg" alt="naruto">
+    <div class="container5">
+        <h1 class="bdy">Happy birthday naruto!.</h1>
+        <img src="images/pixiz-19-02-2023-11-44-43.jpg" alt="naruto" width="350" height="500">
+    </div>
 </body>
 </html>
