change icon and linked the albums

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <nav>
             <div class="icon">
-                <img src="images/icons8-twenty-one-pilots-48.png" alt="logo" width="50" height="50">
+                <img class="round" src="images/icon.jpeg" alt="logo" width="60" height="60">
             </div>
              <div class="link">
                 <a href="#">about</a>
@@ -25,26 +25,26 @@
             <a href="naruto.html" target="_blank"><button>naruto</button></a>
         </div>
         <div class="img1">
-            <img src="images/walll.jpg" alt="21pilots" width="350" height="200">
+            <img   src="images/walll.jpg" alt="21pilots" width="350" height="200">
         </div>
     </div>
     <div class="container2">
         <h2>Albums of Twenty One Pilots</h2>
         <div class="img">
             <div class="albums">
-                <img src="images/Blurryface.jpg" alt="burryface" width="200" height="200">
-                <a class="text" href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><h4>Blurryface</h4></a>
+                <a class="text" href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1" target="_blank"><img src="images/Blurryface.jpg" alt="burryface" width="200" height="200"></a>
+                <a class="text" href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1" target="_blank"><h4>Blurryface</h4></a>
             </div>
             <div class="albums">
-                <img src="images/Trench.jpg" alt="trench" width="200" height="200">
+                <a href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><img src="images/Trench.jpg" alt="trench" width="200" height="200"></a>
                 <a class="text" href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><h4>Trench</h4></a>
             </div>
             <div class="albums">
-                <img src="images/Vessel.jpg" alt="vessel" width="200" height="200">
+                <a href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn" target="_blank"><img src="images/Vessel.jpg" alt="vessel" width="200" height="200"></a>
                 <a class="text" href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn" target="_blank"><h4>Vessel</h4></a>
             </div>
             <div class="albums">
-                <img src="images/peakpx (2).jpg" alt="scaledAndIced" width="200" height="200">
+                <a class="text" href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ" target="_blank"><img src="images/peakpx (2).jpg" alt="scaledAndIced" width="200" height="200"></a>
                 <a class="text" href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ" target="_blank"><h4>scaled and icy</h4></a>
             </div>
         </div>
