changes in content class

--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
                 <a href="#">login</a>
             </div>
         </nav>
+        <div class="content"> 
         <div class="para">
             <h1>Twenty One Pilots </h1>
             <p>This website contains Twenty One Pilots albums this is for you harshit happy birthday!</p>
+            <div class="narutoo">
             <a href="naruto.html" target="_blank"><button>naruto</button></a>
+            </div>
         </div>
-        <div class="img1">
+            <div class="image">
             <img   src="images/walll.jpg" alt="21pilots" width="350" height="200">
+            </div>
         </div>
+    </div>
     </div>
     <div class="container2">
         <h2>Albums of Twenty One Pilots</h2>
@@ -66,5 +71,6 @@
             <p>decoded 21 by Riya Kandpal</p>
         </footer>
     </div>
+
 </body>
 </html>
