navigation bar and link class added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <img class="round" src="images/icon.jpeg" alt="logo" width="60" height="60">
             </div>
              <div class="link">
-                <a href="#">about</a>
-                <a href="#">signup</a>
-                <a href="#">login</a>
+                <a class="barlink" href="https://en.wikipedia.org/wiki/Twenty_One_Pilots" target="_blank">about</a>
+                <a class="barlink" href="#">signup</a>
+                <a class="barlink" href="#">login</a>
             </div>
         </nav>
         <div class="content"> 
