--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Twenty One Pilots </h1>
             <p>This website contains Twenty One Pilots albums this is for you harshit happy birthday!</p>
             <div class="narutoo">
-            <a href="naruto.html" target="_blank"><button>naruto</button></a>
+            <a href="naruto.html" target="_blank"><button class="nar">naruto</button></a>
             </div>
         </div>
             <div class="image">
