--- a/index.html
+++ b/index.html
@@ -38,21 +38,22 @@
         <div class="img">
             <div class="albums">
                 <a class="text" href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1" target="_blank"><img src="images/Blurryface.jpg" alt="burryface" width="200" height="200"></a>
-                <a class="text" href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1" target="_blank"><h4>Blurryface</h4></a>
+                <a class="text1" href="https://open.spotify.com/album/3cQO7jp5S9qLBoIVtbkSM1" target="_blank"><h4>Blurryface</h4></a>
             </div>
             <div class="albums">
                 <a href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><img src="images/Trench.jpg" alt="trench" width="200" height="200"></a>
-                <a class="text" href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><h4>Trench</h4></a>
+                <a class="text1" href="https://open.spotify.com/album/621cXqrTSSJi1WqDMSLmbL" target="_blank"><h4>Trench</h4></a>
             </div>
             <div class="albums">
                 <a href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn" target="_blank"><img src="images/Vessel.jpg" alt="vessel" width="200" height="200"></a>
-                <a class="text" href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn" target="_blank"><h4>Vessel</h4></a>
+                <a class="text1" href="https://open.spotify.com/album/2r2r78NE05YjyHyVbVgqFn" target="_blank"><h4>Vessel</h4></a>
             </div>
             <div class="albums">
                 <a class="text" href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ" target="_blank"><img src="images/peakpx (2).jpg" alt="scaledAndIced" width="200" height="200"></a>
-                <a class="text" href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ" target="_blank"><h4>scaled and icy</h4></a>
+                <a class="text1" href="https://open.spotify.com/album/0Q5XBpCYFgUWiG9DUWyAmJ" target="_blank"><h4>scaled and icy</h4></a>
             </div>
         </div>
+    </div>
         <div class="container3">
             <div class="quote">
                 <p>"when everyone you thought you knew deserts your fight I'll go with you."</p>
@@ -70,7 +71,7 @@
             <p>copyrights @ Harshit Joshi 2023 </p>
             <p>decoded 21 by Riya Kandpal</p>
         </footer>
-    </div>
+   
 
 </body>
 </html>
