--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
         <div class="container3">
             <div class="quote">
                 <p>"when everyone you thought you knew deserts your fight I'll go with you."</p>
-                <p>-- Twenty-one pilots</p>
             </div>
+            <div class="by">
+                -- Twenty-one pilots
+            </div>
+            
         </div>
         <div class="containe4">
             <div class="more">
