--- a/index.html
+++ b/index.html
@@ -55,13 +55,10 @@
         </div>
     </div>
         <div class="container3">
-            <div class="quote">
-                <p>"when everyone you thought you knew deserts your fight I'll go with you."</p>
-            </div>
-            <div class="by">
-                -- Twenty-one pilots
-            </div>
             
+                <p>"when everyone you thought you knew deserts your fight I'll go with you."</p>
+            
+                <b>Twenty-one pilots</b>
         </div>
         <div class="containe4">
             <div class="more">
