--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="content"> 
         <div class="para">
             <h1>Twenty One Pilots </h1>
-            <p>This website contains Twenty One Pilots albums this is for you harshit happy birthday!</p>
+            <p>This website contains Twenty One Pilots albums one of my friend's favorite band.</p>
             <div class="narutoo">
             <a href="naruto.html" target="_blank"><button class="nar">naruto</button></a>
             </div>
@@ -60,16 +60,19 @@
             
                 <b>Twenty-one pilots</b>
         </div>
-        <div class="containe4">
+        <div class="container4">
             <div class="more">
-                <p>Contribute to enhance this website now!</p>
-                <p>click the git hub button for your contribution </p>
-                <a href="https://github.com/R-ia/landing-page" target="_blank" ><button>google</button></a>
+                <div class="contents">
+                     <p><b> contribute to enhance this website now!</b> </p>
+                     <p>click the git hub button for your contribution! </p>
+                 </div>
+                <div>
+                    <a href="https://github.com/R-ia/landing-page" target="_blank" class="button2" ><button>git-hub</button></a>
+                </div>
             </div>
         </div>
         <footer>
-            <p>copyrights @ Harshit Joshi 2023 </p>
-            <p>decoded 21 by Riya Kandpal</p>
+            <p>copyrights @ the odin project  2023 </p>
         </footer>
    
 
