happy birthday message

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="content"> 
         <div class="para">
             <h1>Twenty One Pilots </h1>
-            <p>This website contains Twenty One Pilots albums one of my friend's favorite band.</p>
+            <p>This website contains Twenty One Pilots this is a gift to my friend happy birthday!</p>
             <div class="narutoo">
             <a href="naruto.html" target="_blank"><button class="nar">naruto</button></a>
             </div>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <footer>
-            <p>copyrights @ the odin project  2023 </p>
+            <p>copyrights @ harshit joshi 21/04/2003 </p>
         </footer>
    
 
